--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,8 @@
   <!-- custom fonts:- ROBOTO -->
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,500,500i,900,900i" rel="stylesheet">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-  <link href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt"
+    crossorigin="anonymous">
 </head>
 
 <body>
